<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modules.AddPost.AddPostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivSelectedImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/postphoto"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

        <EditText
            android:id="@+id/etPetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/etCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/caption"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/btnAddPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_post" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@android:color/white" />

    </FrameLayout>
</FrameLayout>