<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Feed Fragment"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnAddPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_post" />

    <Button
        android:id="@+id/btnAddPlaydate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_playdate" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/item_post" />

</LinearLayout>