<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modules.Profile.ProfileFragment">

    <include
        layout="@layout/toolbar_layout"
        android:id="@+id/toolbarProfile"/>

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/profile_image" />

    <Button
        android:id="@+id/btnUpdateImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/update_image"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnUpdateImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnUpdateImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:autofillHints="My Name"
        android:inputType="text"
        android:textSize="18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/edit" />

    <!-- New RecyclerView for displaying user posts -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPosts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/btnEdit"
        android:layout_marginTop="16dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>